fix: refactor WatermarkService class
#2