@@ -20,61 +20,63 @@ import org.apache.tika.Tika;
 
 public class WatermarkService {
 
-    public void createWatermark(File originalFile, File watermarkFile) throws IOException {
+
+    public void createPngWatermark(File originalFile, File watermarkFile) throws IOException {
+
+        // Convert original image to byte string
         byte[] fileContent = this.imageToBytes(originalFile);
+        byte[] imgBytes = fileContent;
         String originalImg = Base64.getEncoder().encodeToString(fileContent);
 
+        // Convert watermark image to byte string
         fileContent = this.imageToBytes(watermarkFile);
+        byte[] watermarkImgBytes = fileContent;
         String watermarkImg = Base64.getEncoder().encodeToString(fileContent);
 
-        byte[] base64Bytes = DatatypeConverter.parseBase64Binary(originalImg);
-        byte[] imgBytes = Base64.getDecoder().decode(originalImg);
-
+        //
+        byte[] originalBase64Bytes = DatatypeConverter.parseBase64Binary(originalImg);
         byte[] watermarkBase64Bytes = DatatypeConverter.parseBase64Binary(watermarkImg);
-        byte[] watermarkImgBytes = Base64.getDecoder().decode(watermarkImg);
 
+        // get the type of the original document
         Tika tika = new Tika();
-        String fileType = tika.detect(base64Bytes).split("/")[1];
 
+        String fileType = tika.detect(originalBase64Bytes).split("/")[1];
         System.out.println("fileType: " + fileType);
+
         String watermarkFileType = tika.detect(watermarkBase64Bytes).split("/")[1];
-
         System.out.println("fileType: " + watermarkFileType);
-        ByteArrayInputStream is = new ByteArrayInputStream(imgBytes);
 
+        ByteArrayInputStream is = new ByteArrayInputStream(imgBytes);
         BufferedImage bi = ImageIO.read(is);
 
         ByteArrayInputStream watrermarkIs = new ByteArrayInputStream(watermarkImgBytes);
         BufferedImage watermarkBi = ImageIO.read(watrermarkIs);
 
         Font f = new Font("TimesRoman", 1, 10);
-        BufferedImage watermarkImage = watermarkBi;
         ByteArrayOutputStream os = new ByteArrayOutputStream();
 
         boolean shift = false;
+        Graphics2D g = bi.createGraphics();
+        g.setComposite(AlphaComposite.getInstance(3, 0.2f));
         switch (fileType) {
-            case "png": {
-                Graphics2D g = bi.createGraphics();
-                g.setColor(new Color(0.128f, 0.128f, 0.128f, 0.3f));
-                g.setFont(f);
-                g.setComposite(AlphaComposite.getInstance(3, 0.2f));
-                g.drawImage(watermarkImage, bi.getWidth() / 2 - 200, bi.getHeight() / 2 - 20, 400, 200, null);
-                ImageIO.write((RenderedImage) bi, "jpeg", os);
+            case "png":
+//                g.setColor(new Color(0.128f, 0.128f, 0.128f, 0.3f));
+//                g.setFont(f);
+                g.drawImage(watermarkBi, bi.getWidth() / 2 - 200, bi.getHeight() / 2 - 20, 400, 200, null);
+                ImageIO.write(bi, "png", os);
                 this.saveFile(bi, originalFile);
                 break;
-            }
             case "jpg":
-            case "jpeg": {
-                System.out.println("Yo, I am here");
-                Graphics2D g = bi.createGraphics();
-                g.setColor(new Color(0.128f, 0.128f, 0.128f, 0.3f));
-                g.setFont(f);
-                g.setComposite(AlphaComposite.getInstance(3, 0.2f));
-                g.drawImage(watermarkImage, bi.getWidth() / 2 - 200, bi.getHeight() / 2 - 20, 400, 200, null);
-                ImageIO.write((RenderedImage) bi, "jpeg", os);
+            case "jpeg":
+//                g.setColor(new Color(0.128f, 0.128f, 0.128f, 0.3f));
+//                g.setFont(f);
+                g.drawImage(watermarkBi, bi.getWidth() / 2 - 200, bi.getHeight() / 2 - 20, 400, 200, null);
+                ImageIO.write(bi, "jpeg", os);
                 this.saveFile(bi, originalFile);
-            }
+                break;
         }
+
+        return;
     }
 
     private byte[] imageToBytes(File file) {
@@ -92,7 +94,8 @@ public class WatermarkService {
         String desktopPath = deskFile.getPath();
         File resultFile = new File(desktopPath + "/result-" + file.getName());
         try {
-            ImageIO.write((RenderedImage) bi, "jpeg", resultFile);
+            // TODO: add more formats (jpg, etc)
+            ImageIO.write(bi, "png", resultFile);
             System.out.println("result path: " + String.valueOf(resultFile));
         } catch (IOException e) {
             throw new RuntimeException(e);
